<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sell_page_fragment"
        android:icon="@drawable/add_filled_circle"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/product_page_fragment"
        android:icon="@drawable/ic_outline_list_24"
        android:title="@string/title_products" />

    <item
        android:id="@+id/loan_page_fragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_loans" />

    <item
        android:id="@+id/statistics_page_fragment"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/title_statistics"/>

    <item
        android:id="@+id/profile_page_fragment"
        android:icon="@drawable/ic_baseline_face_24"
        android:title="@string/title_profile"/>

</menu>