<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.n2_items.add_product.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:background="@drawable/tile"
            android:padding="5dp"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_shopping_bag_24"
            android:scaleType="centerCrop"/>

        <Button
            android:id="@+id/pick_image"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/pick_image"
            android:layout_marginEnd="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/tile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:hint="@string/product_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/tile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:hint="@string/quantity">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/tile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:hint="@string/cost">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_sell_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/tile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:hint="@string/sell_price">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_product_complete"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/add_product"/>
    </LinearLayout>
</ScrollView>